fix page overflow

--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
 body,
 h1 {
-    font-family: "Raleway", sans-serif;
+	font-family: "Raleway", sans-serif;
 }
 
 body,
 html {
-    height: 100%;
+	height: 100%;
 }
 
-.listItem {
-    list-style: none;
+.comments {
+	list-style: none;
+	color: yellow;
 }
 
 u {
-    border-bottom: 1px dashed #FFF;
-    text-decoration: none;
+	border-bottom: 1px dashed #fff;
+	text-decoration: none;
 }
